Update setup-dev command to use pip instead of uv
Replaces 'uv pip install' with 'pip install' in the setup-dev task to simplify the development environment setup.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,7 +144,7 @@ coverage = "pytest --cov=cea cea/tests/"
 
 # Development tasks
 lint = {cmd = "ruff check --fix ."}
-setup-dev = {cmd = "uv pip install -e . --group dev"}
+setup-dev = {cmd = "pip install -e . --group dev"}
 build-wheel = {cmd = "uv build"}
 export-spec = {cmd = "pixi workspace export conda-explicit-spec --ignore-pypi-errors conda-spec"}
 export-conda = {cmd = "pixi workspace export conda-environment environment.yml"}
