--- a/cea/default.config
+++ b/cea/default.config
@@ -1605,6 +1605,11 @@ include-services.type = MultiChoiceParameter
 include-services.choices = DC, DH
 include-services.help = Type of district thermal service(s) to include for the layout design: DH = district heating, DC = district cooling. Leave blank to include both services.
 
+itemised-dh-services = space_heating, domestic_hot_water
+itemised-dh-services.type = MultiChoiceParameter
+itemised-dh-services.choices = space_heating, domestic_hot_water
+itemised-dh-services.help = Heating services served by district heating, in priority order. First service must be served directly by network, second service uses booster if needed. [space_heating, domestic_hot_water] = network at space heating temp (e.g. 35C for LTDH), DHW uses local booster if insufficient. [domestic_hot_water, space_heating] = network at max(60C, space heating temp), ensures DHW always served, accommodates both low-temp and high-temp space heating systems. [space_heating] only = DHW via building-level systems. Order matters.
+
 overwrite-supply-settings = true
 overwrite-supply-settings.type = BooleanParameter
 overwrite-supply-settings.help = True to use 'connected-buildings' parameter instead of buildings defined in Building Properties/Supply.
@@ -1612,6 +1617,8 @@ overwrite-supply-settings.help = True to use 'connected-buildings' parameter ins
 connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
+
+
 
 cooling-plant-building =
 cooling-plant-building.type = StringParameter
