booster added for the 7 use case

--- a/cea/default.config
+++ b/cea/default.config
@@ -1036,6 +1036,11 @@ substation-heating-systems.choices = ahu, aru, shu, ww
 substation-heating-systems.help = List of heating loads to be supplied (DH mode)
 substation-heating-systems.category = Detailed Model Parameters
 
+network-temperature = -1
+network-temperature.type = RealParameter
+network-temperature.help = Fixed supply temperature for simplified model in celsius. Use -1 for variable temperature (VT mode - temperature follows building requirements). Use a positive value (e.g., 50) for constant temperature (CT mode - fixed supply temp, boosters used when building requirements exceed network temp).
+network-temperature.category = Simplified Model Parameters
+
 temperature-control = VT
 temperature-control.type = ChoiceParameter
 temperature-control.choices = VT, CT
