upper and lower bound  ✓ Accepts -1, 0-100

--- a/cea/default.config
+++ b/cea/default.config
@@ -1038,7 +1038,9 @@ substation-heating-systems.category = Detailed Model Parameters
 
 network-temperature = -1
 network-temperature.type = RealParameter
-network-temperature.help = Fixed supply temperature for simplified model in celsius. Use -1 for variable temperature (VT mode - temperature follows building requirements). Use a positive value (e.g., 50) for constant temperature (CT mode - fixed supply temp, boosters used when building requirements exceed network temp).
+network-temperature.min = -1
+network-temperature.max = 100
+network-temperature.help = Fixed supply temperature for simplified model in Celsius. Use -1 for variable temperature (VT mode - temperature follows building requirements). Use a positive value for constant temperature (CT mode - fixed supply temp, boosters used when building requirements exceed network temp). Typical values: 30-80 C for DH, 5-15 C for DC.
 
 temperature-control = VT
 temperature-control.type = ChoiceParameter
