allowing no-network selection

--- a/cea/default.config
+++ b/cea/default.config
@@ -871,7 +871,9 @@ metrics-other-renewables.category = Metrics
 
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
-network-name.help = Select an existing network layout to include its metrics.
+network-name.nullable = true
+network-name.default-to-none = true
+network-name.help = Select an existing network layout to include its metrics, or select "(none)" to exclude network metrics from the summary. Networks are created by the 'network-layout' script.
 network-name.category = Metrics
 
 include-advanced-analytics = true
