update district-level events to work with material-based envelope definition.

--- a/cea/default.config
+++ b/cea/default.config
@@ -469,63 +469,126 @@ archetypes.help = Archetype(s) that will have new constructions applied after th
 archetypes.locator = get_database_archetypes_construction_type
 archetypes.column = const_type
 
-wall-U-value =
-wall-U-value.type = RealParameter
-wall-U-value.nullable = true
-wall-U-value.help = New U-value [W/m2K] to apply to the selected archetypes after the event.
-wall-U-value.category = New Wall Properties
-wall-GHG-emission = 
-wall-GHG-emission.type = RealParameter
-wall-GHG-emission.nullable = true
-wall-GHG-emission.help = New embodied GHG emission factor [kgCO2e/m2] to apply to the selected archetypes after the event.
-wall-GHG-emission.category = New Wall Properties
-wall-GHG-biogenic-emission =
-wall-GHG-biogenic-emission.type = RealParameter
-wall-GHG-biogenic-emission.nullable = true
-wall-GHG-biogenic-emission.help = New biogenic GHG emission factor [kgCO2e/m2] stored in biogenic materials to apply to the selected archetypes after the event.
-wall-GHG-biogenic-emission.category = New Wall Properties
+wall-material-name-1 =
+wall-material-name-1.type = ColumnChoiceParameter
+wall-material-name-1.nullable = true
+wall-material-name-1.locator = get_database_components_materials
+wall-material-name-1.column = name
+wall-material-name-1.help = Name of first material layer for walls (must match materials database). Leave blank to keep the existing material.
+wall-material-name-1.category = New Wall Properties
+wall-thickness-1-m =
+wall-thickness-1-m.type = RealParameter
+wall-thickness-1-m.nullable = true
+wall-thickness-1-m.help = Thickness [m] of first material layer for walls.
+wall-thickness-1-m.category = New Wall Properties
+wall-material-name-2 =
+wall-material-name-2.type = ColumnChoiceParameter
+wall-material-name-2.nullable = true
+wall-material-name-2.locator = get_database_components_materials
+wall-material-name-2.column = name
+wall-material-name-2.help = Name of second material layer for walls (must match materials database). Leave blank to keep the existing material.
+wall-material-name-2.category = New Wall Properties
+wall-thickness-2-m =
+wall-thickness-2-m.type = RealParameter
+wall-thickness-2-m.nullable = true
+wall-thickness-2-m.help = Thickness [m] of second material layer for walls.
+wall-thickness-2-m.category = New Wall Properties
+wall-material-name-3 =
+wall-material-name-3.type = ColumnChoiceParameter
+wall-material-name-3.nullable = true
+wall-material-name-3.locator = get_database_components_materials
+wall-material-name-3.column = name
+wall-material-name-3.help = Name of third material layer for walls (must match materials database). Leave blank to keep the existing material.
+wall-material-name-3.category = New Wall Properties
+wall-thickness-3-m =
+wall-thickness-3-m.type = RealParameter
+wall-thickness-3-m.nullable = true
+wall-thickness-3-m.help = Thickness [m] of third material layer for walls.
+wall-thickness-3-m.category = New Wall Properties
 wall-Lifetime =
 wall-Lifetime.type = IntegerParameter
 wall-Lifetime.nullable = true
 wall-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
 wall-Lifetime.category = New Wall Properties
 
-roof-U-value =
-roof-U-value.type = RealParameter
-roof-U-value.nullable = true
-roof-U-value.help = New U-value [W/m2K] to apply to the selected archetypes after the event.
-roof-U-value.category = New Roof Properties
-roof-GHG-emission =
-roof-GHG-emission.type = RealParameter
-roof-GHG-emission.nullable = true
-roof-GHG-emission.help = New embodied GHG emission factor [kgCO2e/m2] to apply to the selected archetypes after the event.
-roof-GHG-emission.category = New Roof Properties
-roof-GHG-biogenic-emission =
-roof-GHG-biogenic-emission.type = RealParameter
-roof-GHG-biogenic-emission.nullable = true
-roof-GHG-biogenic-emission.help = New biogenic GHG emission factor [kgCO2e/m2] stored in biogenic materials to apply to the selected archetypes after the event.
-roof-GHG-biogenic-emission.category = New Roof Properties
+roof-material-name-1 =
+roof-material-name-1.type = ColumnChoiceParameter
+roof-material-name-1.nullable = true
+roof-material-name-1.locator = get_database_components_materials
+roof-material-name-1.column = name
+roof-material-name-1.help = Name of first material layer for roofs (must match materials database). Leave blank to keep the existing material.
+roof-material-name-1.category = New Roof Properties
+roof-thickness-1-m =
+roof-thickness-1-m.type = RealParameter
+roof-thickness-1-m.nullable = true
+roof-thickness-1-m.help = Thickness [m] of first material layer for roofs.
+roof-thickness-1-m.category = New Roof Properties
+roof-material-name-2 =
+roof-material-name-2.type = ColumnChoiceParameter
+roof-material-name-2.nullable = true
+roof-material-name-2.locator = get_database_components_materials
+roof-material-name-2.column = name
+roof-material-name-2.help = Name of second material layer for roofs (must match materials database). Leave blank to keep the existing material.
+roof-material-name-2.category = New Roof Properties
+roof-thickness-2-m =
+roof-thickness-2-m.type = RealParameter
+roof-thickness-2-m.nullable = true
+roof-thickness-2-m.help = Thickness [m] of second material layer for roofs.
+roof-thickness-2-m.category = New Roof Properties
+roof-material-name-3 =
+roof-material-name-3.type = ColumnChoiceParameter
+roof-material-name-3.nullable = true
+roof-material-name-3.locator = get_database_components_materials
+roof-material-name-3.column = name
+roof-material-name-3.help = Name of third material layer for roofs (must match materials database). Leave blank to keep the existing material.
+roof-material-name-3.category = New Roof Properties
+roof-thickness-3-m =
+roof-thickness-3-m.type = RealParameter
+roof-thickness-3-m.nullable = true
+roof-thickness-3-m.help = Thickness [m] of third material layer for roofs.
+roof-thickness-3-m.category = New Roof Properties
 roof-Lifetime =
 roof-Lifetime.type = IntegerParameter
 roof-Lifetime.nullable = true
 roof-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
 roof-Lifetime.category = New Roof Properties
 
-base-U-value =
-base-U-value.type = RealParameter
-base-U-value.nullable = true
-base-U-value.help = New U-value [W/m2K] to apply to the selected archetypes after the event.
-base-U-value.category = New Base Properties
-base-GHG-emission =
-base-GHG-emission.type = RealParameter
-base-GHG-emission.nullable = true
-base-GHG-emission.help = New embodied GHG emission factor [kgCO2e/m2] to apply to the selected archetypes after the event.
-base-GHG-emission.category = New Base Properties
-base-GHG-biogenic-emission =
-base-GHG-biogenic-emission.type = RealParameter
-base-GHG-biogenic-emission.nullable = true
-base-GHG-biogenic-emission.help = New biogenic GHG emission factor [kgCO2e/m2] stored in biogenic materials to apply to the selected archetypes after the event.
-base-GHG-biogenic-emission.category = New Base Properties
+base-material-name-1 =
+base-material-name-1.type = ColumnChoiceParameter
+base-material-name-1.nullable = true
+base-material-name-1.locator = get_database_components_materials
+base-material-name-1.column = name
+base-material-name-1.help = Name of first material layer for bases/floors (must match materials database). Leave blank to keep the existing material.
+base-material-name-1.category = New Base Properties
+base-thickness-1-m =
+base-thickness-1-m.type = RealParameter
+base-thickness-1-m.nullable = true
+base-thickness-1-m.help = Thickness [m] of first material layer for bases/floors.
+base-thickness-1-m.category = New Base Properties
+base-material-name-2 =
+base-material-name-2.type = ColumnChoiceParameter
+base-material-name-2.nullable = true
+base-material-name-2.locator = get_database_components_materials
+base-material-name-2.column = name
+base-material-name-2.help = Name of second material layer for bases/floors (must match materials database). Leave blank to keep the existing material.
+base-material-name-2.category = New Base Properties
+base-thickness-2-m =
+base-thickness-2-m.type = RealParameter
+base-thickness-2-m.nullable = true
+base-thickness-2-m.help = Thickness [m] of second material layer for bases/floors.
+base-thickness-2-m.category = New Base Properties
+base-material-name-3 =
+base-material-name-3.type = ColumnChoiceParameter
+base-material-name-3.nullable = true
+base-material-name-3.locator = get_database_components_materials
+base-material-name-3.column = name
+base-material-name-3.help = Name of third material layer for bases/floors (must match materials database). Leave blank to keep the existing material.
+base-material-name-3.category = New Base Properties
+base-thickness-3-m =
+base-thickness-3-m.type = RealParameter
+base-thickness-3-m.nullable = true
+base-thickness-3-m.help = Thickness [m] of third material layer for bases/floors.
+base-thickness-3-m.category = New Base Properties
 base-Lifetime =
 base-Lifetime.type = IntegerParameter
 base-Lifetime.nullable = true
