separate timeline definition and timeline build

--- a/cea/default.config
+++ b/cea/default.config
@@ -602,6 +602,28 @@ base-Lifetime.nullable = true
 base-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
 base-Lifetime.category = New Base Properties
 
+[district-events-build]
+build-mode = reconcile
+build-mode.type = ChoiceParameter
+build-mode.choices = missing, reconcile, rebuild
+build-mode.help = How to materialise state-in-time scenarios from the district timeline log.
+    "missing" creates only missing state folders, "reconcile" updates only outdated years, and "rebuild" recreates all years.
+build-mode.category = District Timeline
+
+regenerate-building-properties = true
+regenerate-building-properties.type = BooleanParameter
+regenerate-building-properties.help = True to regenerate building-properties inputs from archetypes after building each state.
+regenerate-building-properties.category = District Timeline
+
+[state-simulations]
+simulation-mode = pending
+simulation-mode.type = ChoiceParameter
+simulation-mode.choices = pending, all
+simulation-mode.help = Which state years to simulate.
+    "pending" simulates only years that have not been simulated yet, or where construction changes mean results are out of date.
+    "all" simulates every `state_{year}` folder present in `district_timeline_states`.
+simulation-mode.category = District Timeline
+
 [extract-reference-case]
 destination = {general:scenario}/../..
 destination.type = PathParameter
