--- a/cea/default.config
+++ b/cea/default.config
@@ -1618,7 +1618,7 @@ overwrite-supply-settings.help = True to use 'connected-buildings' parameter ins
 itemised-dh-services = space_heating, domestic_hot_water
 itemised-dh-services.type = MultiChoiceParameter
 itemised-dh-services.choices = space_heating, domestic_hot_water
-itemised-dh-services.help = Heating services served by district heating, in priority order. Ignored if 'overwrite-supply-settings' is False. First service must be served directly by network, second service uses booster if needed. [space_heating, domestic_hot_water] = network at space heating temp (e.g. 35C for LTDH), DHW uses local booster if insufficient. [domestic_hot_water, space_heating] = network at max(60C, space heating temp), ensures DHW always served, accommodates both low-temp and high-temp space heating systems. [space_heating] only = DHW via building-level systems. [domestic_hot_water] only = space heating via building-level systems. Order matters.
+itemised-dh-services.help = Services provided by the district heating network, in priority order. First service determines network supply temperature; second service may require local boosters. Leave empty to provide all services (space_heating first). Examples: [space_heating, domestic_hot_water] = low-temp network (35-55°C) with DHW boosters if needed; [domestic_hot_water, space_heating] = high-temp network (60°C+) serving DHW directly; [space_heating] = space heating only; [domestic_hot_water] = DHW only.
 
 connected-buildings =
 connected-buildings.type = BuildingsParameter
