--- a/cea/default.config
+++ b/cea/default.config
@@ -957,7 +957,7 @@ network-type.help = Type of district network to be simulated: "DH" (district hea
 network-model = simplified
 network-model.type = ChoiceParameter
 network-model.choices = simplified, detailed
-network-model.help = Choose either simplified (seconds) or detailed model (several hours)
+network-model.help = Simplified: decoupled hydraulic-thermal calculation using WNTR/EPANET (fast - in minutes, always converges). Detailed: coupled iterative hydraulic-thermal solver (slower - in hours, may fail to converge)
 
 min-head-substation = 20
 min-head-substation.type = RealParameter
