--- a/cea/default.config
+++ b/cea/default.config
@@ -954,6 +954,20 @@ network-type.type = MultiChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type of district network to be simulated: "DH" (district heating) or "DC" (district cooling).
 
+network-temperature-dh = -1
+network-temperature-dh.type = RealParameter
+network-temperature-dh.min = -1
+network-temperature-dh.max = 100
+network-temperature-dh.help = Fixed supply temperature for district heating network in Celsius. Use -1 for variable temperature (VT mode - temperature follows building requirements). Use a positive value for constant temperature (CT mode - fixed supply temp, boosters activate when building requirements exceed network temp). Typical values: 30-55°C for low-temp networks (space heating priority), 60-80°C for high-temp networks (domestic hot water priority).
+network-temperature-dh.category = Network Supply Temperature Settings
+
+network-temperature-dc = -1
+network-temperature-dc.type = RealParameter
+network-temperature-dc.min = -1
+network-temperature-dc.max = 30
+network-temperature-dc.help = Fixed supply temperature for district cooling network in Celsius. Use -1 for variable temperature (VT mode - temperature follows building requirements). Use a positive value for constant temperature (CT mode - fixed supply temp). Typical values: 5-15°C.
+network-temperature-dc.category = Network Supply Temperature Settings
+
 network-model = simplified
 network-model.type = ChoiceParameter
 network-model.choices = simplified, detailed
@@ -1035,18 +1049,6 @@ substation-heating-systems.type = MultiChoiceParameter
 substation-heating-systems.choices = ahu, aru, shu, ww
 substation-heating-systems.help = List of heating loads to be supplied (DH mode)
 substation-heating-systems.category = Detailed Model Parameters
-
-network-temperature-dh = -1
-network-temperature-dh.type = RealParameter
-network-temperature-dh.min = -1
-network-temperature-dh.max = 100
-network-temperature-dh.help = Fixed supply temperature for district heating network in Celsius. Use -1 for variable temperature (VT mode - temperature follows building requirements). Use a positive value for constant temperature (CT mode - fixed supply temp, boosters activate when building requirements exceed network temp). Typical values: 30-55°C for low-temp networks (space heating priority), 60-80°C for high-temp networks (domestic hot water priority).
-
-network-temperature-dc = -1
-network-temperature-dc.type = RealParameter
-network-temperature-dc.min = -1
-network-temperature-dc.max = 30
-network-temperature-dc.help = Fixed supply temperature for district cooling network in Celsius. Use -1 for variable temperature (VT mode - temperature follows building requirements). Use a positive value for constant temperature (CT mode - fixed supply temp). Typical values: 5-15°C.
 
 [thermal-network-optimization]
 network-type = DH
