--- a/cea/default.config
+++ b/cea/default.config
@@ -973,7 +973,7 @@ network-temperature-dc.category = Network Supply Temperature Settings
 network-model = simplified
 network-model.type = ChoiceParameter
 network-model.choices = simplified, detailed
-network-model.help = Simplified: decoupled hydraulic-thermal calculation using WNTR/EPANET (fast - in minutes, always converges). Detailed: coupled iterative hydraulic-thermal solver (slower - in hours, may fail to converge)
+network-model.help = Simplified: uses WNTR/EPANET for hydraulics with simplified thermal loss model (fast - in minutes, always converges). Detailed: uses custom hydraulic solver with detailed thermal loss model (slower - in hours, may fail to converge)
 
 min-head-substation = 20
 min-head-substation.type = RealParameter
