--- a/cea/default.config
+++ b/cea/default.config
@@ -1675,6 +1675,11 @@ network-geojson-path.extensions = geojson
 network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
 network-geojson-path.category = User-Defined Layout
 
+auto-augment-missing-buildings = true
+auto-augment-missing-buildings.type = BooleanParameter
+auto-augment-missing-buildings.help = Automatically extend user-defined networks when Building Properties/Supply or 'connected-buildings' require additional buildings not present in the user network. When enabled (default), CEA uses Steiner tree optimisation to add missing buildings via shortest street paths. User's existing network edges and nodes are never modified, only extended. When disabled, strict validation raises an error if any buildings are missing.
+auto-augment-missing-buildings.category = User-Defined Layout
+
 consider-only-buildings-with-demand = true
 consider-only-buildings-with-demand.type = BooleanParameter
 consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
