Revert "Update scripts.yml"
This reverts commit 315ca34c5dbbc52637f69fd247ddda8a67407dea.

--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -329,14 +329,14 @@ Energy Supply System Optimisation:
     label: "Supply System Optimisation: building-scale"
     short_description: Optimise decentralised energy supply systems
     description: This Feature optimises energy supply systems for decentralised operation.
-    interfaces: [cli]
+    interfaces: [cli, dashboard]
     module: cea.optimization.preprocessing.decentralized_building_main
-    parameters: ['general:scenario', 'decentralised', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free']
+    parameters: ['general:scenario', 'decentralized', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free']
     input-files:
       - [get_total_demand]
 
   - name: optimization-new
-    label: "District Supply System Optimisation"
+    label: "Supply System Optimisation: district-scale"
     short_description: Optimise centralised energy supply systems
     description: This Feature optimises energy supply systems for centralised operation.
     interfaces: [cli, dashboard]
